<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/header_text"
        android:text="Add event"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:nextFocusUp="@+id/matEdt" android:nextFocusLeft="@+id/matEdt"
                android:id="@+id/matEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title or description of event"
                app:met_floatingLabel="normal"
                android:inputType="textCapSentences"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/typeChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="Tipul evenimentului"/>
                <!--<Spinner-->
                    <!--android:id="@+id/spinner"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="56dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_toEndOf="@+id/typeChoice"-->
                    <!--android:layout_toRightOf="@+id/typeChoice"/>-->
                <com.rey.material.widget.Spinner
                    style="@style/Material.Widget.Spinner"
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/typeChoice"
                    android:layout_toRightOf="@+id/typeChoice"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave.Light"
                    app:spn_arrowSwitchMode="true"
                    app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
                    app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
                    app:rd_enable="true"
                    app:rd_delayClick="none"
                    app:spn_labelEnable="true"
                    app:spn_labelTextColor="@color/black"
                    app:et_dividerHeight="1dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@color/white"

                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="9dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/calendar_icon"
                        android:layout_margin="7dp"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:id="@+id/txtStartDate"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="right|center_vertical"
                        android:paddingBottom="5dp"
                        android:text="Start Date"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="40dp"
                        android:text="Pick Date   "
                        style="?android:attr/spinnerStyle"
                        android:id="@+id/txtDayPick"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/calendar_icon"
                        android:layout_margin="7dp"
                        android:layout_marginLeft="5dp"
                        android:visibility="invisible"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/txtStartHour"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="0dp"
                        android:gravity="right|center_vertical"
                        android:paddingBottom="5dp"
                        android:text="Start Hour"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_gravity="center"
                        android:layout_height="40dp"
                        android:textColor="@android:color/black"
                        android:text="Pick hour   "
                        style="?android:attr/spinnerStyle"
                        android:id="@+id/txtTimePick"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/calendar_icon"
                        android:layout_margin="7dp"
                        android:layout_marginLeft="5dp"
                        android:visibility="invisible"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="0dp"
                        android:gravity="right|center_vertical"
                        android:paddingBottom="5dp"
                        android:text="Duration"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:id="@+id/txtSetDuration"
                        />

                    <TextView
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_gravity="center"
                        android:layout_height="40dp"
                        android:textColor="@android:color/black"
                        android:text="1 hour"
                        style="?android:attr/spinnerStyle"
                        android:id="@+id/duration"
                        />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp">
                    <ImageButton
                        android:id="@+id/crc_orange"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_orange"/>
                    <ImageButton
                        android:id="@+id/crc_teal"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_teal"/>
                    <ImageButton
                        android:id="@+id/crc_blue"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_blue"/>
                    <ImageButton
                        android:id="@+id/crc_red"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_red"/>
                    <ImageButton
                        android:id="@+id/crc_green"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_green"/>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pick a color for the event"
                android:gravity="center_horizontal"
                android:textColor="@color/gray"
                android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/msg_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="Fill all the fields!"
        android:textSize="20sp"
        android:visibility="gone"
        android:gravity="center_horizontal"/>

    <com.dd.CircularProgressButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/circularButton1"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Save" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>